src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 0 2rem 2rem;
  text-align: center;
}

.puzzle {
  max-width: 900px;
}

.character-selection-modal {
  max-width: 220px;
  color: gainsboro;
  background-color: #282828;
  border-radius: 5px;
  position: absolute;
  box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
  padding: 6px 20px 0;
  cursor: pointer;
}

.character-selection-radius {
  border-radius: 25px;
  border: solid limegreen 2px;
  width: 30px;
  height: 30px;
  position: absolute;
  box-shadow: 0 0 15px 1px #00ff00;
}

.modal-x-button {
  position: absolute;
  left: 8px;
  top: 0px;
  cursor: pointer;
}

#navbar {
  position: relative;
  width: 800px;
  height: 90px;
  max-width: 800px;
  max-height: 90px;
  margin: 0 auto 60px;
  align-items: center;
}

#navtitle {
  position: absolute;
  left: 0;
}

#subtitle {
  position: absolute;
  left: 0;
  top: 68px;
  font-weight: 300;
}

#navlinksdiv {
  margin: 48px 0 0;
  position: absolute;
  right: 0;
}

#navlinks {
  padding: auto 0 auto;
  list-style-type: none;
}

#navlinks > li {
  display: inline;
  padding-left: 40px;
}

#navbar * span, #navbar * a {
  color: gainsboro !important;
  cursor: pointer;
}

#checks {
  margin-bottom: 24px;
}

.game_win_modal {
  padding: 20px;
  position: fixed;
  top: 50%;
  left: 50%;
  border-radius: 10px;
  width: 500px;
  height: 300px;
  background-color: #282828;
  border: 5px solid gold;
  transform: translate(-50%, -50%);
  box-shadow: 0 0 120px rgba(0, 0, 0, 90.6);
}

.leaderboard {
  padding: 20px;
  position: fixed;
  top: 50%;
  left: 50%;
  border-radius: 10px;
  width: 400px;
  background-color: #282828;
  border: 5px solid gold;
  transform: translate(-50%, -50%);
  box-shadow: 0 0 120px rgba(0, 0, 0, 90.6);
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

.table {
  width: 100%;
  border: 1px solid;
}

.table, th, td {
  border: 1px solid;
}

.refresh {
  position: absolute;
  right: 8px;
  top: 4px;
  cursor: pointer;
  color: gold;
  font-size: 12px;
}

#show_leaderboard {
  position: absolute;
  right: 45px;
  top: -8px;
  color: gold;
}

